2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
	  coord was being ignored in comparisons of nodes). This fixes the
	  Monitor Training problem. Probably fixes countless other pathfinding
	  problems too.

2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* exult.cc: little correction of the --help screen (--bg, --si instead of 
	  -bg -si)
	* Readme, FAQ: updated.
	* docs/xml/docs.xml, faq.xml: updated
	* docs/readme.html, faq.html: updated

2002-07-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: SIGCHLD handler to clean up forked playmidi processes
	* configure.in: check for sys/wait.h, signal.h (see above)

2002-07-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.*, exult.cc: added -c option for alternate config files
	  (quite useful if you have multiple data dirs or languages of BG/SI)

2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.cc: Fixed bug where cart could get stuck on a step.

2002-07-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* orangedress.shp, bluedress.shp: new paperdoll art by sbx

2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc,flags.h,actors.h:  Figured out that 'zombie' is
	referred to as flag 30 in usecode functions.

	* schedule.cc (Street_maintenance_schedule): Don't follow Avatar
	if Avatar is under Usecode control.
	* intrinsics.cc:  update_last_created() no longer checks for a spot.
	* sigame.cc:  Added a patch to move Neyobi on top of the pelt.

2002-07-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/greentop.shp: new paperdoll art. Thanks sbx!
	* usecode/ucxt/Makefile.am: fixed --disable-tools
	* configure.in: install gnome things to $(datadir)
	(instead of $(GNOMEDATADIR)). This allows non-root installs.
	* data/Makefile.am: don't install estudio data when not building that
