@@ -1,3 +1,6 @@
+2002-08-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* gumps/*: backported unicode conversion for savegame gumps
+
 2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
 	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
 	  coord was being ignored in comparisons of nodes). This fixes the
